# her

./: LICENSE  README.md  pyproject.toml
assigment/: 31_Medical_Question_Answering.ipynb  langchain_rag.py  ocr.py  requirements.txt
chatbot/: .env.example  3_lcel_memory.py  4_lcel_memory_rag.py  5_lcel_memory_rag_agents.py  6_rag_agent_server.2.py  6_rag_agent_server.py  lcel_rag.py  lcel_rag_built_in_func.py
chatbot/app/: app.py  bot.py  history_rag.py  memory.py  rag_with_memory.py  runnable_chat_history.py  streamlit_chat_history.py
chatbot/configs/: __init__.py
content_gen/: gen_2.py
