[tool.poetry]
name = "her"
version = "0.1.0"
description = ""
authors = ["dluca14 <dluca14@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.24.0"
redis = "^5.0.8"
spacy = "^3.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
